feat(toolbar-navigation): add "Relatórios" button to navigation toolbar

--- a/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
+++ b/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
@@ -16,6 +16,10 @@
       routerLinkActive="active-route" [styleClass]="'nav-button'">
     </p-button>
 
+    <p-button icon="pi pi-chart-line" label="Relatórios" routerLink="/relatorios"
+      routerLinkActive="active-route" [styleClass]="'nav-button'">
+    </p-button>
+
     <p-button icon="pi pi-list" label="Atividades" routerLink="/atividades" routerLinkActive="active-route"
       [styleClass]="'nav-button'">
     </p-button>
