--- a/src/app/modules/atividades/components/atividades-table/atividades-table.component.html
+++ b/src/app/modules/atividades/components/atividades-table/atividades-table.component.html
@@ -46,8 +46,8 @@
                 </div>
                 <div class="flex justify-content-between align-items-center">
                   <p-sortIcon field="nome"></p-sortIcon>
-                  <p-columnFilter type="text" field="nome" display="menu" matchMode="contains" [showMatchModes]="false"
-                    [showOperator]="false" [showAddButton]="false"></p-columnFilter>
+                  <p-columnFilter display="input" type="text" field="nome" display="menu" matchMode="contains"
+                    [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
                 </div>
               </div>
             </th>
